--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Supermercado+One');
-
+/* changes #1*/
 /* 
     Add a CSS ruleset to accomplish the following:
     - Use the 'Lato' font family at 18px throughout the body of the document
