secend commit: line 63 of 1st style

--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -5,7 +5,11 @@
     - Use the 'Lato' font family at 18px throughout the body of the document
     - cover the of the document background with the "map-bg.jpg" image in the images directory. 
 */
-
+body {
+    font-family: 18px 'Lato';
+    background-image: url("/Users/broughw/Documents/ct-assessment-stylemenu/assets/images/map-bg.jpg");
+    
+}
 
 nav {font-family: sans-serif;font-size: 10px;}
 #main {width: 900px; margin: 10px auto;}
@@ -16,7 +20,10 @@ nav {font-family: sans-serif;font-size: 10px;}
         - set the font size to 45px 
         - set the font color to #5d4037
 */
-
+h1 {
+    font-family: 'Supermercado One', cursive;    font-size: 45px;
+    color: #5d4037;
+}
 
 /* 
     Update the following ruleset (#menu) to accomplish the following:
@@ -25,6 +32,8 @@ nav {font-family: sans-serif;font-size: 10px;}
 #menu {
     columns: 400px 2;
     column-gap: 100px;
+    border-style: dashed 2px;
+    column-rule: dashed 2px rosybrown;
 }
 
 section {padding-bottom: 50px;}
@@ -35,7 +44,10 @@ h2 {margin: 0;}
         - Show each of the section headings of the menu  in small caps
         - set the font color to #6d4c41
 */
-
+h2 {
+    font-variant: small-caps;
+    color: #6d4c41;
+}
 
 /* 
     Add a CSS ruleset targeting the name of each menu item to accomplish the following:
