--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -6,7 +6,8 @@
     - cover the of the document background with the "map-bg.jpg" image in the images directory. 
 */
 body {
-    font-family: 18px 'Lato';
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
     background-image: url("/Users/broughw/Documents/ct-assessment-stylemenu/assets/images/map-bg.jpg");
     
 }
@@ -54,7 +55,10 @@ h2 {
         - Set the font size to 20px
         - Make the font bold
 */
-
+dt {
+    font-size: 20px;
+    font-weight: bold;
+}
 
 dd {margin: 0 0 12px 0; display: flex;}
 .details {order: 1;}
@@ -67,6 +71,8 @@ dd {margin: 0 0 12px 0; display: flex;}
 .price {
     order: 2;
     padding-left: 10px;
+    color: firebrick;
+    font-size: larger;
 }
 
 address {padding: 10px;}
@@ -75,3 +81,7 @@ address {padding: 10px;}
     Add a CSS ruleset targeting the footer to accomplish the following:
         - Draw a 2px dashed rosybrown border
 */
+footer {
+    border: dashed rosybrown;
+}
+
