--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -18,6 +18,11 @@ nav {font-family: sans-serif; font-size: 10px;}
         - set the font size to 46px 
         - use a lighter weight font
 */
+h1 {
+    font-family: 'Bungee Inline';
+    font-weight: lighter;
+    font-size: 46px;
+}
 
 
 #menu {columns: 420px 2; column-gap: 60px;}
@@ -29,7 +34,10 @@ h2 {margin-top: 0;}
     Add a CSS ruleset targeting targeting the headings of the menu (e.g. "Starters") to accomplish the following:
         - Show each of the section headings of the menu in uppercase
 */
-
+h2 {
+    text-transform: uppercase;
+    
+}
 
 /* 
      Update the following ruleset (dt) to accomplish the following:
@@ -38,12 +46,15 @@ h2 {margin-top: 0;}
 */
 dt {
     display: inline;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 /* 
     Add a CSS ruleset to accomplish the following:
     - Make a comma appear after the name of each menu item
 */
+dt::after {content: ",";}
 
 
 
@@ -57,11 +68,16 @@ dd::after {content: " "; display: block; clear: both; margin-bottom: 15px;}
     - right align the text in the footer
 */
 
-
+footer {
+    text-align: right;
+}
 
 /* 
     Add a CSS ruleset targeting the starters and desserts sections to accomplish the following:
     - draw a 2px black border around the sections
 */
 
-
+#starters,#desserts{
+    border: solid black 2px;
+    
+}
